@@ -35,29 +35,21 @@
  * @package p4a
  */
 
-	/**
-	 * The main p4a file.
-	 */
+/**
+ * The main p4a file.
+ */
 
-	//Disabling magic_quotes_runtime (default)
-	ini_set('magic_quotes_runtime','Off');
-	ini_set('magic_quotes_sybase','Off');
+//Main inclusion file
+require_once(dirname(__FILE__) . '/include.php');
 
-	//Main inclusion file
-	require_once(dirname(__FILE__) . '/include.php');
+//Setting PHP error reporting
+if (P4A_EXTENDED_ERRORS) {
+	error_reporting(E_ALL);
+} else {
+	error_reporting(E_ALL ^ E_NOTICE);
+}
 
-	//Setting PHP error reporting
-	if (P4A_EXTENDED_ERRORS) {
-		error_reporting(E_ALL);
-	} else {
-		error_reporting(E_ALL ^ E_NOTICE);
-	}
-
-	//We can have more applications on same site and same browser instance
-	session_name('sn_' . preg_replace('~\W~', '_', P4A_APPLICATION_NAME) . '_p4a');
-
-	$action_return = NULL;
-
-	//We're going to instance new application if it's not already instanced.
-	session_id(session_id() . 'p4a');
-	session_start();
+//We can have more applications on same site and same browser instance
+session_name(preg_replace('~\W~', '_', P4A_APPLICATION_NAME));
+session_start();
+$action_return = null;
