@@ -1,5 +1,6 @@
 2.1.6
 - jQuery was updated to 1.1.4
+- double session (used to ovoid multiple scan of objects directories) was removed
 
 2.1.5
 - Hungarian translation was added (thanks to Sándor Csaba)
